@@ -1,18 +1,18 @@
-/*
- * This file is part of the Aion-Emu project.
- * 
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program. If not, see <http://www.gnu.org/licenses/>.
+/**
+ * This file is part of Aion-Lightning <aion-lightning.org>.
+ *
+ *  Aion-Lightning is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  Aion-Lightning is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details. *
+ *  You should have received a copy of the GNU General Public License
+ *  along with Aion-Lightning.
+ *  If not, see <http://www.gnu.org/licenses/>.
  */
 package com.aionemu.commons.database.dao;
 
@@ -36,7 +36,8 @@ import com.aionemu.commons.scripting.classlistener.ScheduledTaskClassListener;
 import com.aionemu.commons.scripting.scriptmanager.ScriptManager;
 
 /**
- * This class manages {@link DAO} implementations, it resolves valid implementation for current database
+ * This class manages the lifecycle and retrieval of {@link DAO} implementations.<br>
+ * It resolves the correct implementation based on the current database configuration.
  * @author SoulKeeper, Saelya
  */
 public class DAOManager
@@ -57,7 +58,10 @@ public class DAOManager
 	private static ScriptManager scriptManager;
 	
 	/**
-	 * Initializes DAOManager.
+	 * Initializes the {@link DAOManager} and its internal components.<br>
+	 * This method sets up the {@code scriptManager} and registers necessary class listeners.<br>
+	 * It loads the database scripts defined in {@link DatabaseConfig}.<br>
+	 * If any fatal error occurs during this process, it will throw an {@code Error}.
 	 */
 	public static void init()
 	{
@@ -95,7 +99,10 @@ public class DAOManager
 	}
 	
 	/**
-	 * Shutdown DAOManager
+	 * Shuts down the {@link DAOManager} and cleans up resources.<br>
+	 * It calls the shutdown method on the internal {@code scriptManager}.<br>
+	 * It clears all registered DAOs from the {@code daoMap}.<br>
+	 * The {@code scriptManager} reference is set to {@code null}.
 	 */
 	public static void shutdown()
 	{
@@ -105,21 +112,17 @@ public class DAOManager
 	}
 	
 	/**
-	 * Returns DAO implementation by DAO class. Typical usage:
-	 * <p/>
-	 * < pre>
-	 * <p/>
-	 * AccountDAO dao = DAOManager.getDAO(AccountDAO.class);
-	 * </pre>
-	 * @param clazz Abstract DAO class implementation of which was registered
-	 * @param <T> Subclass of DAO
-	 * @return DAO implementation
-	 * @throws DAONotFoundException if DAO implementation not found
+	 * Retrieves a specific {@link DAO} instance based on the provided class type.<br>
+	 * This method looks up the implementation in the internal registry.<br>
+	 * It throws an exception if the requested DAO is not registered.
+	 * @param <T>
+	 * @param clazz The class of the {@link DAO} to retrieve.
+	 * @return The instance of the requested {@code DAO}.
+	 * @throws DAONotFoundException If no implementation exists for the given class.
 	 */
 	@SuppressWarnings("unchecked")
 	public static <T extends DAO> T getDAO(Class<T> clazz) throws DAONotFoundException
 	{
-		
 		final DAO result = daoMap.get(clazz.getName());
 		
 		if (result == null)
@@ -133,18 +136,25 @@ public class DAOManager
 	}
 	
 	/**
-	 * Registers {@link DAO}.<br>
-	 * First it creates new instance of DAO, then invokes {@link DAO#supports(String, int, int)} <br>
-	 * . If the result was possitive - it associates DAO instance with {@link com.aionemu.commons.database.dao.DAO#getClassName()} <br>
-	 * If another DAO was registed - {@link com.aionemu.commons.database.dao.DAOAlreadyRegisteredException} will be thrown
-	 * @param daoClass DAO implementation
-	 * @throws DAOAlreadyRegisteredException if DAO is already registered
-	 * @throws IllegalAccessException if something went wrong during instantiation of DAO
-	 * @throws InstantiationException if something went wrong during instantiation of DAO
+	 * Registers a new {@link DAO} implementation into the system.<br>
+	 * This method creates an instance of the provided {@code daoClass}.<br>
+	 * It checks if the {@code DAO} supports the current database version before registration.
+	 * @param daoClass The class of the {@link DAO} to register.
+	 * @throws DAOAlreadyRegisteredException If a {@code DAO} with the same class name is already registered.
+	 * @throws IllegalAccessException If the constructor of the {@code daoClass} is inaccessible.
+	 * @throws InstantiationException If the {@code daoClass} cannot be instantiated.
 	 */
 	public static void registerDAO(Class<? extends DAO> daoClass) throws DAOAlreadyRegisteredException, IllegalAccessException, InstantiationException
 	{
-		final DAO dao = daoClass.newInstance();
+		final DAO dao;
+		try
+		{
+			dao = daoClass.getDeclaredConstructor().newInstance();
+		}
+		catch (NoSuchMethodException | java.lang.reflect.InvocationTargetException e)
+		{
+			throw new InstantiationException(e.toString());
+		}
 		
 		if (!dao.supports(getDatabaseName(), getDatabaseMajorVersion(), getDatabaseMinorVersion()))
 		{
@@ -164,6 +174,7 @@ public class DAOManager
 				log.error(s);
 				throw new DAOAlreadyRegisteredException(s);
 			}
+			
 			daoMap.put(dao.getClassName(), dao);
 		}
 		
@@ -174,8 +185,9 @@ public class DAOManager
 	}
 	
 	/**
-	 * Unregisters DAO class
-	 * @param daoClass DAO implementation to unregister
+	 * Removes a specific {@link DAO} implementation from the manager.<br>
+	 * This method searches for the class and deletes it from the internal map.
+	 * @param daoClass The {@code Class} of the {@link DAO} to be removed.
 	 */
 	public static void unregisterDAO(Class<? extends DAO> daoClass)
 	{
@@ -198,6 +210,11 @@ public class DAOManager
 		}
 	}
 	
+	/**
+	 * Private constructor for the {@link DAOManager} class.<br>
+	 * This prevents other classes from creating new instances of this manager.<br>
+	 * The class uses static methods to manage {@link DAO} implementations.
+	 */
 	private DAOManager()
 	{
 		// empty
