@@ -1,18 +1,18 @@
-/*
- * This file is part of the Aion-Emu project.
- * 
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program. If not, see <http://www.gnu.org/licenses/>.
+/**
+ * This file is part of Aion-Lightning <aion-lightning.org>.
+ *
+ *  Aion-Lightning is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  Aion-Lightning is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details. *
+ *  You should have received a copy of the GNU General Public License
+ *  along with Aion-Lightning.
+ *  If not, see <http://www.gnu.org/licenses/>.
  */
 package com.aionemu.commons.scripting.impl.javacompiler;
 
@@ -29,7 +29,6 @@ import java.util.Set;
 
 import javax.tools.JavaFileObject;
 
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -37,9 +36,8 @@ import com.aionemu.commons.scripting.ScriptClassLoader;
 import com.aionemu.commons.utils.ClassUtils;
 
 /**
- * This classloader is used to load script classes. <br>
- * <br>
- * Due to JavaCompiler limitations we have to keep list of available classes here.
+ * This classloader is used to load script classes.<br>
+ * It maintains a list of available classes to overcome {@code JavaCompiler} limitations.
  * @author SoulKeeper
  */
 public class ScriptClassLoaderImpl extends ScriptClassLoader
@@ -52,14 +50,10 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 	private final ClassFileManager classFileManager;
 	
 	/**
-	 * Creates new ScriptClassLoader with given ClassFileManger. <br>
-	 * Parent ClassLoader is ClassLoader of current class:
-	 * 
-	 * <pre>
-	 * ScriptClassLoaderImpl.class.getClassLoader()
-	 * </pre>
-	 *
-	 * @param classFileManager classFileManager of this classLoader
+	 * Creates a new instance of {@link ScriptClassLoaderImpl}.<br>
+	 * This constructor initializes the internal {@code classFileManager}.<br>
+	 * It sets the parent class loader to the loader of this class.
+	 * @param classFileManager The {@code ClassFileManager} used by this class loader.
 	 */
 	ScriptClassLoaderImpl(ClassFileManager classFileManager)
 	{
@@ -68,9 +62,11 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 	}
 	
 	/**
-	 * Creates new ScriptClassLoader with given ClassFileManger and another classLoader as parent
-	 * @param classFileManager classFileManager of this classLoader
-	 * @param parent parent classLoader
+	 * Creates a new instance of {@link ScriptClassLoaderImpl}.<br>
+	 * This constructor initializes the loader with a specific {@code ClassFileManager}.<br>
+	 * It also sets the parent {@code ClassLoader} for the hierarchy.
+	 * @param classFileManager The manager used to handle script classes.
+	 * @param parent The parent {@code ClassLoader} to use for loading dependencies.
 	 */
 	ScriptClassLoaderImpl(ClassFileManager classFileManager, ClassLoader parent)
 	{
@@ -79,8 +75,9 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 	}
 	
 	/**
-	 * Returns ClassFileManager that is related to this ClassLoader
-	 * @return classFileManager of this classLoader
+	 * Retrieves the {@code ClassFileManager} associated with this loader.<br>
+	 * This manager handles the file operations for compiled classes.
+	 * @return the {@link ClassFileManager} instance.
 	 */
 	public ClassFileManager getClassFileManager()
 	{
@@ -88,7 +85,9 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 	}
 	
 	/**
-	 * {@inheritDoc}
+	 * Retrieves the names of all classes that have been compiled.<br>
+	 * This method returns an unmodifiable set of strings.
+	 * @return a {@code Set<String>} containing the names of the compiled classes.
 	 */
 	@Override
 	public Set<String> getCompiledClasses()
@@ -98,12 +97,13 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 	}
 	
 	/**
-	 * Returns list of classes that are members of a package
-	 * @param packageName package to search for classes
-	 * @return list of classes that are package members
-	 * @throws IOException if was unable to load class
+	 * Retrieves all {@link JavaFileObject} instances for a specific package.<br>
+	 * This method searches through the parent classloader and current compiled classes.<br>
+	 * It also scans resources and libraries to find matching members.
+	 * @param packageName The name of the package to search for.
+	 * @return A {@code Set} containing the found {@link JavaFileObject} instances.
+	 * @throws IOException If an error occurs while reading class data from the filesystem or JARs.
 	 */
-	@SuppressWarnings("deprecation")
 	public Set<JavaFileObject> getClassesForPackage(String packageName) throws IOException
 	{
 		final Set<JavaFileObject> result = new HashSet<>();
@@ -112,7 +112,9 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 		final ClassLoader parent = getParent();
 		if (parent instanceof ScriptClassLoaderImpl)
 		{
-			result.addAll(((ScriptClassLoaderImpl) parent).getClassesForPackage(packageName));
+			final ScriptClassLoaderImpl pscl = (ScriptClassLoaderImpl) parent;
+			result.addAll(pscl.getClassesForPackage(packageName));
+			pscl.close();
 		}
 		
 		// load current classloader compiled classes
@@ -133,7 +135,7 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 		while (urls.hasMoreElements())
 		{
 			final URL url = urls.nextElement();
-			String path = URLDecoder.decode(url.getPath());
+			String path = URLDecoder.decode(url.getPath(), "UTF-8");
 			if (new File(path).isDirectory())
 			{
 				final Set<String> packageClasses = ClassUtils.getClassNamesFromPackage(new File(path), packageName, false);
@@ -146,12 +148,13 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 				{
 					file = file.getParentFile();
 				}
+				
 				path = file.getPath().substring(0, file.getPath().length() - 1);
 				path = path.replace('\\', '/');
 				path = path.substring(path.indexOf(":") + 1);
 				file = new File(path);
-				// add jar file as library. Actually it's doesn't matter if we have it as library
-				// or as file in class path
+				
+				// Add the JAR file as a library, although it does not matter if it is included as a library or a file in the classpath.
 				addJarFile(file);
 			}
 		}
@@ -176,6 +179,7 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 					log.error("Error while loading class from package " + packageName, e);
 					throw e;
 				}
+				
 				result.add(bc);
 			}
 		}
@@ -184,11 +188,11 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 	}
 	
 	/**
-	 * Finds class with the specified name from the URL search path. Any URLs referring to JAR files are loaded and opened as needed until the class is found.
-	 * @param name the name of the class
-	 * @return the resulting class data
-	 * @throws IOException if failed to load class
-	 * @throws IllegalArgumentException if failed to open input stream for class
+	 * Retrieves the raw byte array of a class file by its name.<br>
+	 * This method locates the resource and reads its content into memory.
+	 * @param name The fully qualified name of the class to load.
+	 * @return A {@code byte[]} containing the compiled class data.
+	 * @throws IOException If an error occurs while reading the file.
 	 */
 	protected byte[] getRawClassByName(String name) throws IOException
 	{
@@ -200,7 +204,7 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 		try
 		{
 			is = resource.openStream();
-			clazz = IOUtils.toByteArray(is);
+			clazz = is.readAllBytes();
 		}
 		catch (IOException e)
 		{
@@ -226,11 +230,16 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 				}
 			}
 		}
+		
 		return clazz;
 	}
 	
 	/**
-	 * {@inheritDoc}
+	 * Retrieves the compiled bytecode for a specific class.<br>
+	 * This method looks up the class in the {@link ClassFileManager}.<br>
+	 * It returns a copy of the byte array representing the class file.
+	 * @param className The fully qualified name of the class to retrieve.
+	 * @return A {@code byte[]} containing the compiled bytecode.
 	 */
 	@Override
 	public byte[] getByteCode(String className)
@@ -242,7 +251,11 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 	}
 	
 	/**
-	 * {@inheritDoc}
+	 * Retrieves the {@code Class<?>} object for a given class name.<br>
+	 * It looks up the compiled class in the internal manager.<br>
+	 * Returns {@code null} if the class is not found.
+	 * @param name The fully qualified name of the class to retrieve.
+	 * @return The {@code Class<?>} object, or {@code null} if it does not exist.
 	 */
 	@Override
 	public Class<?> getDefinedClass(String name)
@@ -257,7 +270,11 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader
 	}
 	
 	/**
-	 * {@inheritDoc}
+	 * Registers a specific {@code Class<?>} instance for a given name.<br>
+	 * This method links a compiled class to its loaded representation.<br>
+	 * It will throw an {@code IllegalArgumentException} if the name was not previously compiled.
+	 * @param name The name of the class to associate with the provided class object.
+	 * @param clazz The {@code Class<?>} instance that represents the defined class.
 	 */
 	@Override
 	public void setDefinedClass(String name, Class<?> clazz)
