@@ -1,47 +1,51 @@
-/*
- * This file is part of the Aion-Emu project.
- * 
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program. If not, see <http://www.gnu.org/licenses/>.
+/**
+ * This file is part of Aion-Lightning <aion-lightning.org>.
+ *
+ *  Aion-Lightning is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  Aion-Lightning is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details. *
+ *  You should have received a copy of the GNU General Public License
+ *  along with Aion-Lightning.
+ *  If not, see <http://www.gnu.org/licenses/>.
  */
 package com.aionemu.commons.versionning;
 
 import java.io.File;
 import java.io.FilenameFilter;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.text.CharacterIterator;
 import java.text.StringCharacterIterator;
 import java.util.Locale;
 
 /**
- * The Locator is a utility class which is used to find certain items in the environment.
+ * This is a utility class used to locate specific items within the system environment.<br>
+ * It provides helper methods to find files and resources based on various criteria.
  * @since Ant 1.6
  */
 public final class Locator
 {
 	/**
-	 * Not instantiable
+	 * Private constructor to prevent instantiation.<br>
+	 * This class is intended to be used as a utility class only.
 	 */
 	private Locator()
 	{
 	}
 	
 	/**
-	 * Find the directory or jar file the class has been loaded from.
-	 * @param c the class whose location is required.
-	 * @return the file or jar with the class or null if we cannot determine the location.
-	 * @since Ant 1.6
+	 * Finds the physical file location of a given {@code Class}.<br>
+	 * It uses the {@code getClassLoader} to locate the resource.
+	 * @param c The {@code Class} object to locate.
+	 * @return A {@code File} object representing the source path.
 	 */
 	public static File getClassSource(Class<?> c)
 	{
@@ -50,11 +54,12 @@ public final class Locator
 	}
 	
 	/**
-	 * Find the directory or jar a given resource has been loaded from.
-	 * @param c the classloader to be consulted for the source.
-	 * @param resource the resource whose location is required.
-	 * @return the file with the resource source or null if we cannot determine the location.
-	 * @since Ant 1.6
+	 * Finds the {@code File} object for a specific resource.<br>
+	 * It uses the provided {@code ClassLoader} to locate the path.<br>
+	 * If the loader is {@code null}, it defaults to the system class loader.
+	 * @param c The {@code ClassLoader} to use for searching.
+	 * @param resource The name of the resource to find.
+	 * @return A {@code File} object if found, or {@code null} otherwise.
 	 */
 	public static File getResourceSource(ClassLoader c, String resource)
 	{
@@ -62,6 +67,7 @@ public final class Locator
 		{
 			c = Locator.class.getClassLoader();
 		}
+		
 		URL url = null;
 		if (c == null)
 		{
@@ -71,6 +77,7 @@ public final class Locator
 		{
 			url = c.getResource(resource);
 		}
+		
 		if (url != null)
 		{
 			final String u = url.toString();
@@ -87,41 +94,40 @@ public final class Locator
 				return new File(fromURI(dirName));
 			}
 		}
+		
 		return null;
 	}
 	
 	/**
-	 * Constructs a file path from a <code>file:</code> URI.
-	 * <p>
-	 * Will be an absolute path if the given URI is absolute.
-	 * </p>
-	 * <p>
-	 * Swallows '%' that are not followed by two characters, doesn't deal with non-ASCII characters.
-	 * </p>
-	 * @param uri the URI designating a file in the local filesystem.
-	 * @return the local file system path for the file.
-	 * @since Ant 1.6
+	 * Converts a {@code String} URI into a system-specific file path.<br>
+	 * This method validates that the input is a valid {@code file} protocol.<br>
+	 * It handles character decoding and replaces forward slashes with the correct separator.
+	 * @param uri The {@code String} representation of the URI to convert.
+	 * @return The decoded system path as a {@code String}.
 	 */
 	public static String fromURI(String uri)
 	{
 		URL url = null;
 		try
 		{
-			url = new URL(uri);
+			url = new URI(uri).toURL();
 		}
-		catch (MalformedURLException emYouEarlEx)
+		catch (MalformedURLException | URISyntaxException emYouEarlEx)
 		{
 			// Ignore malformed exception
 		}
+		
 		if ((url == null) || !("file".equals(url.getProtocol())))
 		{
 			throw new IllegalArgumentException("Can only handle valid file: URIs");
 		}
+		
 		final StringBuffer buf = new StringBuffer(url.getHost());
 		if (buf.length() > 0)
 		{
 			buf.insert(0, File.separatorChar).insert(0, File.separatorChar);
 		}
+		
 		final String file = url.getFile();
 		final int queryPos = file.indexOf('?');
 		buf.append((queryPos < 0) ? file : file.substring(0, queryPos));
@@ -132,14 +138,17 @@ public final class Locator
 		{
 			uri = uri.substring(1);
 		}
+		
 		final String path = decodeUri(uri);
 		return path;
 	}
 	
 	/**
-	 * Decodes an Uri with % characters.
-	 * @param uri String with the uri possibly containing % characters.
-	 * @return The decoded Uri
+	 * Converts a URL-encoded string into its plain text format.<br>
+	 * This method replaces percent-encoded characters with their actual values.<br>
+	 * It returns the original string if no encoding is detected.
+	 * @param uri The encoded {@code String} to be decoded.
+	 * @return The decoded {@code String}.
 	 */
 	private static String decodeUri(String uri)
 	{
@@ -147,6 +156,7 @@ public final class Locator
 		{
 			return uri;
 		}
+		
 		final StringBuffer sb = new StringBuffer();
 		final CharacterIterator iter = new StringCharacterIterator(uri);
 		for (char c = iter.first(); c != CharacterIterator.DONE; c = iter.next())
@@ -170,13 +180,16 @@ public final class Locator
 				sb.append(c);
 			}
 		}
+		
 		final String path = sb.toString();
 		return path;
 	}
 	
 	/**
-	 * Get the File necessary to load the Sun compiler tools. If the classes are available to this class, then no additional URL is required and null is returned. This may be because the classes are explicitly in the class path or provided by the JVM directly.
-	 * @return the tools jar as a File if required, null otherwise.
+	 * Retrieves the location of the {@code tools.jar} file.<br>
+	 * It checks if the compiler is already available in the classpath.<br>
+	 * If not found, it attempts to locate the jar using the {@code java.home} property.
+	 * @return a {@code File} object representing the path to {@code tools.jar}, or {@code null} if it cannot be found.
 	 */
 	public static File getToolsJar()
 	{
@@ -200,31 +213,35 @@ public final class Locator
 				// ignore
 			}
 		}
+		
 		if (toolsJarAvailable)
 		{
 			return null;
 		}
-		// couldn't find compiler - try to find tools.jar
-		// based on java.home setting
+		
+		// Could not find the compiler; try finding tools.jar based on the java.home setting.
 		String javaHome = System.getProperty("java.home");
 		if (javaHome.toLowerCase(Locale.US).endsWith("jre"))
 		{
 			javaHome = javaHome.substring(0, javaHome.length() - 4);
 		}
+		
 		final File toolsJar = new File(javaHome + "/lib/tools.jar");
 		if (!toolsJar.exists())
 		{
 			System.out.println("Unable to locate tools.jar. " + "Expected to find it in " + toolsJar.getPath());
 			return null;
 		}
+		
 		return toolsJar;
 	}
 	
 	/**
-	 * Get an array of URLs representing all of the jar files in the given location. If the location is a file, it is returned as the only element of the array. If the location is a directory, it is scanned for jar files.
-	 * @param location the location to scan for Jars.
-	 * @return an array of URLs for all jars in the given location.
-	 * @throws MalformedURLException if the URLs for the jars cannot be formed.
+	 * Converts a {@code File} into an array of {@link URL} objects.<br>
+	 * This method specifically looks for files with the {@code .jar} extension.
+	 * @param location The {@code File} to be converted.
+	 * @return An array of {@link URL} objects representing the file locations.
+	 * @throws MalformedURLException If the path is not a valid URL.
 	 */
 	public static URL[] getLocationURLs(File location) throws MalformedURLException
 	{
@@ -235,48 +252,52 @@ public final class Locator
 	}
 	
 	/**
-	 * Get an array of URLs representing all of the files of a given set of extensions in the given location. If the location is a file, it is returned as the only element of the array. If the location is a directory, it is scanned for matching files.
-	 * @param location the location to scan for files.
-	 * @param extensions an array of extension that are to match in the directory search.
-	 * @return an array of URLs of matching files.
-	 * @throws MalformedURLException if the URLs for the files cannot be formed.
+	 * Converts a {@code File} and its matching children into an array of {@link URL} objects.<br>
+	 * This method filters files based on the provided {@code extensions}.<br>
+	 * If the {@code location} does not exist, it returns an empty array.
+	 * @param location The {@code File} path to search.
+	 * @param extensions An array of file extensions to filter by.
+	 * @return An array of {@link URL} objects matching the criteria.
+	 * @throws MalformedURLException If the file path cannot be converted to a valid {@link URL}.
 	 */
 	public static URL[] getLocationURLs(File location, String[] extensions) throws MalformedURLException
 	{
-		
 		URL[] urls = new URL[0];
 		
 		if (!location.exists())
 		{
 			return urls;
 		}
+		
 		if (!location.isDirectory())
 		{
 			urls = new URL[1];
 			final String path = location.getPath();
-			for (String extension : extensions)
+			for (int i = 0; i < extensions.length; ++i)
 			{
-				if (path.toLowerCase().endsWith(extension))
+				if (path.toLowerCase().endsWith(extensions[i]))
 				{
 					urls[0] = location.toURI().toURL();
 					break;
 				}
 			}
+			
 			return urls;
 		}
+		
 		final File[] matches = location.listFiles(new FilenameFilter()
 		{
-			
 			@Override
 			public boolean accept(File dir, String name)
 			{
-				for (String extension : extensions)
+				for (int i = 0; i < extensions.length; ++i)
 				{
-					if (name.toLowerCase().endsWith(extension))
+					if (name.toLowerCase().endsWith(extensions[i]))
 					{
 						return true;
 					}
 				}
+				
 				return false;
 			}
 		});
@@ -285,6 +306,7 @@ public final class Locator
 		{
 			urls[i] = matches[i].toURI().toURL();
 		}
+		
 		return urls;
 	}
 }
